add actor by film
